...
                                <rect key="frame" x="0.0" y="288" width="414" height="32"/>
                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="UwT-dx-3Bu"/>
                                </constraints>
                                <segments>
                                    <segment title="News"/>
                                    <segment title="Players"/>
                                </segments>
                                <connections>
                                    <action selector="segmentChanged:" destination="dJd-9B-Nbt" eventType="valueChanged" id="Urm-aO-PWW"/>
                                </connections>
                            </segmentedControl>
                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vbx-ys-Sgr" userLabel="Players Container View">
...
