...

    @IBOutlet private weak var teamLabel: UILabel!
    var team: Team?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "SegmentedVC"
        // Adding image from URL
        let activityIndicator = self.frontImageView.setActivityIndicator()
        frontImageView.imageFromURL(urlString: team?.photo ?? "https://sweettutos.com/wp-content/uploads/2015/12/placeholder.png", completionHandler: { activityIndicator.removeFromSuperview()  })
        teamLabel.text = team?.name
    }
    
...
