...

    var team: Team?
    var events: [Event] = [] 
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "NewsVC"
        render(state: .presenting([]))
        logicController?.loadEventData(fromTeam: team ?? Team()) { [weak self] state in
            guard let self = self else { return }
            self.render(state: state)
        }
        addRefreshControl()
...
